<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:textColor="@color/gray"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:contentDescription="@string/imagedesc"
            app:srcCompat="@drawable/image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:background="@color/teal">


            <Button
                android:id="@+id/like"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="-4dp"
                android:layout_weight="1"
                android:text="@string/like"
                android:textColor="@color/white"
                android:backgroundTint="@color/teal"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="-4dp"
                android:layout_weight="1"
                android:text="@string/delete"
                android:textColor="@color/white"
                android:backgroundTint="@color/teal"
                app:cornerRadius="0dp"/>

            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="-4dp"
                android:layout_weight="1"
                android:text="@string/save"
                android:textColor="@color/white"
                android:backgroundTint="@color/teal"
                app:cornerRadius="0dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/likeCounter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="textEnd"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:text="@string/stringLikeCount" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/gray"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="5dp"
            android:textStyle="bold"
            android:text="@string/descTitle"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="5dp"
            android:textColor="@color/gray"
            android:text="@string/description"/>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>